--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .idea/.idea
+../.idea
+../.idea/inspectionProfiles
+../.idea/misc.xml
+../.idea/modules.xml
+../.idea/super-duper-octo-fiesta.iml
+../.idea/vcs.xml
+../.idea/watcherTasks.xml
+../.idea/workspace.xml
